--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <h1 class="sm:text-3xl md:text-5xl text-center mt-5 mb-5">
+        Welcome to the Counter App
+
+    </h1>
+    <hr>
     <div class="mt-6 flex justify-center items-center">
         <div class="">
             <div class=" flex justify-center items-center h-60 w-60 border-lime-500 border-solid border-4">
